samples/_failures_safe/1761364251_c47840_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20e44a4c.c: In function ‘main’:
./samples/SAFE/__tmp_20e44a4c.c:174:9: error: expected expression at end of input
  174 |         if (token.type == TOKEN_EOF || token.type ==
      |         ^~
./samples/SAFE/__tmp_20e44a4c.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20e44a4c.c:174:9: error: expected declaration or statement at end of input
